
* 0.2.1 *

Compatibility with 32-bit systems. Better cross language testing [Klaus Gundermann]


* 0.2.0 *

* Convert GUID's in a more compatible way. [Klaus Gundermann]

* Handle multiple result sets in command buffer or stored procs. [Ken Collins]

* Fixed some compiler warnings. [Erik Bryn]

* Avoid segfault related to smalldatetime conversion. [Erik Bryn]

* Properly encode column names in 1.9. [Erik Bryn]


* 0.1.0 Initial release!
