@@ -1,7 +1,11 @@
+* master *
+
+* Fixed failing test in Ruby 1.8.6. DateTime doesn't support fractional seconds greater than 59. See: http://redmine.ruby-lang.org/issues/show/1490 [Erik Bryn]
+
 
 * 0.2.1 *
 
-Compatibility with 32-bit systems. Better cross language testing [Klaus Gundermann]
+* Compatibility with 32-bit systems. Better cross language testing. [Klaus Gundermann]
 
 
 * 0.2.0 *
